feat: save reports dynamic forms values fix: avoid affecting generated reports when editirn forms configuration
