# src/Backend/Inspections.Core/QueryModels/ReportQueryResult.cs
@@ -20,40 +20,7 @@ public class ReportQueryResult
     public string FormName { get; set; } = default!;
     public string? RemarksLabelText { get; set; }
     public bool IsClosed { get; set; }
-
-    public DynamicFields? AdditionalFields { get; set; }
-
-    public DynamicFields? DynamicOperationalReadings { get; set; }
-    // public int OperationalReadingsId { get; set; }
-    // public short OperationalReadingsVoltageL1N { get; set; }
-    // public short OperationalReadingsVoltageL2N { get; set; }
-    // public short OperationalReadingsVoltageL3N { get; set; }
-    // public short OperationalReadingsVoltageL1L2 { get; set; }
-    // public short OperationalReadingsVoltageL1L3 { get; set; }
-    // public short OperationalReadingsVoltageL2L3 { get; set; }
-    // public short OperationalReadingsRunningLoadL1 { get; set; }
-    // public short OperationalReadingsRunningLoadL2 { get; set; }
-    // public short OperationalReadingsRunningLoadL3 { get; set; }
-    // public short OperationalReadingsMainBreakerAmp { get; set; }
-    // public short OperationalReadingsMainBreakerPoles { get; set; }
-    // public short OperationalReadingsMainBreakerCapacity { get; set; }
-    // public short OperationalReadingsOverCurrentDTLA { get; set; }
-    // public short OperationalReadingsOverCurrentDTLSec { get; set; }
-    // public short OperationalReadingsOverCurrentIDMTLA { get; set; }
-    // public short OperationalReadingsOverCurrentIDMTLTm { get; set; }
-    // public short OperationalReadingsEarthFaultMA { get; set; }
-    // public short OperationalReadingsEarthFaultELRA { get; set; }
-    // public short OperationalReadingsEarthFaultELRSec { get; set; }
-    // public short OperationalReadingsEarthFaultA { get; set; }
-    // public short OperationalReadingsEarthFaultSec { get; set; }
-    // public short OperationalReadingsMainBreakerRating { get; set; }
-    // public bool OperationalReadingsOverCurrentDirectActingEnabled { get; set; }
-    // public short OperationalReadingsOverCurrentDirectActing { get; set; }
-    // public bool OperationalReadingsOverCurrentDTLEnabled { get; set; }
-    // public bool OperationalReadingsOverCurrentIDTMLEnabled { get; set; }
-    // public bool OperationalReadingsEarthFaultRoobEnabled { get; set; }
-    // public bool OperationalReadingsEarthFaultEIREnabled { get; set; }
-    // public bool OperationalReadingsEarthFaultEFEnabled { get; set; }
+    public IEnumerable<FormResult> Forms { get; set; } = default!;
     public IEnumerable<SignatureQueryResult> Signatures { get; set; } = default!;
     public IEnumerable<CheckListQueryResult> CheckLists { get; set; } = default!;
     public IEnumerable<NoteQueryResult> Notes { get; set; } = default!;
